flux/apps/immich-proxy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich
spec:
  clusterIP: None
  ports:
    - name: http
      port: 30041
      protocol: TCP
